# rust-shooter

./: Cargo.toml  README.md
resources/: spaceship_sprites.json
src/: config.rs  hitbox.rs  main.rs  shooter.rs  spritesheet.rs  state.rs  weapon.rs
