[package]
name = "rust-shooter"
version = "0.3.0"
authors = ["Shishir Tandale <shishir@tandale.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
rand = "0.7.0"
rand_distr = "0.2.2"
nalgebra = "0.18"
trees = "0.2.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
