[package]
name = "rust-shooter"
version = "0.4.0"
authors = ["Shishir Tandale <shishir@tandale.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
rand = "0.7.0"
rand_distr = "0.2.2"
nalgebra = "0.18"
trees = "0.2.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
