[package]
name = "rust-shooter"
version = "0.7.0"
authors = ["Shishir Tandale <shishir@tandale.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9"
rand = "0.8"
rand_distr = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
